--- a/cloudmart-frontend.yaml
+++ b/cloudmart-frontend.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: cloudmart-pod-execution-role
       containers:
       - name: cloudmart-frontend-app
-        image: public.ecr.aws/z3h1u7r2/cloudmaster-frontend:latest 
+        image: CONTAINER_IMAGE 
 ---
 
 apiVersion: v1
